# Corneferencer

./: .gitattributes  .gitignore  Dockerfile  README.md  conf.py  pred.sh  pyproject.toml  requirements.txt  requirements_2022_06_19.txt
Cython-0.29.14/: MANIFEST
Cython-0.29.14/Cython.egg-info/: PKG-INFO  SOURCES.txt
Cython-0.29.14/Cython/Compiler/: FlowControl.c  FusedNode.c  Scanning.c  Visitor.c
Cython-0.29.14/Cython/Plex/: Actions.c  Scanners.c
Cython-0.29.14/Cython/Runtime/: refnanny.c
Cython-0.29.14/Cython/Tempita/: _tempita.c
corneferencer/: entities.py  main.py  prepare_data.py  utils.py
corneferencer/inout/: constants.py  mmax.py  tei.py
corneferencer/resolvers/: constants.py  features.py  resolve.py  vectors.py
freq/: base.lst
models/: model_1147_features.h5  model_1190_features.h5  w2v_allwiki_nkjpfull_50.model  w2v_allwiki_nkjpfull_50.model.syn0.npy  w2v_allwiki_nkjpfull_50.model.syn1neg.npy
wikipedia/: link.map  redirect.map
