[tool.poetry]
name = "corneferencer"
version = "0.1.0"
description = ""
authors = ["Bartłomiej Nitoń"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.8"
lxml = "^4.9.3"
natsort = "^8.4.0"
tensorflow = "2.9.1"
cython = {path="Cython-0.29.14/dist/Cython-0.29.14.tar.gz"}
h5py = "^2.10.0"
zipp = "3.8.0"
wrapt = "1.14.1"
werkzeug = "2.1.2"
urllib3 = "1.26.9"
typing-extensions = "4.2.0"
termcolor = "1.1.0"
tensorflow-io-gcs-filesystem = "0.26.0"
tensorflow-estimator = "2.9.0"
tensorboard-plugin-wit = "1.8.1"
tensorboard-data-server = "0.6.1"
tensorboard = "2.9.1"
smart-open = "6.0.0"
six = "1.16.0"
scipy = "1.5.1"
rsa = "4.8"
requests-oauthlib = "1.3.1"
pyyaml = "6.0"
pandas = "^1.3.0"
gensim = "^3.8.3"
keras = "2.9.0"
javaobj-py3 = "0.4.3"
build = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
